update navbar,products,product component

--- a/amigurumi-app/package.json
+++ b/amigurumi-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amigurumi-app",
+  "name": "prodject-amigorumi",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,12 +11,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
-    "@angular/cdk": "^16.1.3",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
-    "@angular/material": "^16.1.3",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
