--- a/amigurumi-app/package.json
+++ b/amigurumi-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
