--- a/amigurumi-app/angular.json
+++ b/amigurumi-app/angular.json
@@ -102,6 +102,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2,
+            "browserTarget": "Prodject-Amigorumi:build:production"
+          }
         }
       }
     }
