--- a/amigurumi-app/package.json
+++ b/amigurumi-app/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@types/moment": "^2.13.0",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
