--- a/amigurumi-app/firebase.json
+++ b/amigurumi-app/firebase.json
@@ -1,9 +1,16 @@
 {
-  "hosting": [
-    {
-      "target": "Prodject-Amigorumi",
-      "source": ".",
-      "frameworksBackend": {}
-    }
-  ]
+  "hosting": {
+    "public": "dist/prodject-amigorumi",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
