--- a/amigurumi-app/package.json
+++ b/amigurumi-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "clean": "rm -rf dist" 
   },
   "private": true,
   "dependencies": {
