--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,56 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-*.json
-*.ts
-*.html
-*.css
-*.ttf
-*.ico
-*.woff2
-*.txt
-*.js
-*.cache
-*.png
-*.pack
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
 src/assets/.gitkeep
-.firebaserc
+*.png
+*.html
+*.ts
+*.css
+*.json
+*.ico
 .editorconfig
-*.old
+.firebaserc
