--- a/amigurumi-app/package.json
+++ b/amigurumi-app/package.json
@@ -7,12 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "clean": "rm -rf dist" 
+    "clean": "rm -rf dist"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
+    "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/fire": "^7.6.1",
@@ -25,6 +24,7 @@
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
+    "ngx-moment": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
