--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/moment": "^2.13.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
+    "express": "^4.19.2",
     "jquery": "^3.7.0",
+    "mocha": "^10.4.0",
     "moment": "^2.29.4",
     "ngx-moment": "^6.0.2",
     "rxjs": "~7.8.0",
@@ -34,6 +39,7 @@
     "@angular-devkit/build-angular": "^16.1.1",
     "@angular/cli": "~16.1.1",
     "@angular/compiler-cli": "^16.1.0",
+    "@playwright/test": "^1.43.1",
     "@types/jasmine": "~4.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
