--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@playwright/test": "^1.43.1",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.12.7",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
